update connectors 2.0 , set base comment