@@ -1,5 +1,6 @@
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
 
 public class ParameterStringBuilder {
@@ -7,9 +8,9 @@ public class ParameterStringBuilder {
     throws UnsupportedEncodingException {
         StringBuilder result = new StringBuilder();
         for (Map.Entry<String,String> entry : params.entrySet()) {
-            result.append(URLEncoder.encode(entry.getKey(),"UTF-8"));
+            result.append(URLEncoder.encode(entry.getKey(), StandardCharsets.UTF_8));
             result.append("=");
-            result.append(URLEncoder.encode(entry.getValue(),"UTF-8"));
+            result.append(URLEncoder.encode(entry.getValue(), StandardCharsets.UTF_8));
             result.append("&");
         }
 
